--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.8.4",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
