--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "css-minimizer-webpack-plugin": "^4.0.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jsdoc-ts-utils": "^4.0.0",
     "mini-css-extract-plugin": "^2.6.0",
     "node-sass": "^7.0.1",
     "postcss": "^8.4.14",
@@ -39,6 +40,7 @@
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "typedoc": "^0.23.28",
     "typescript": "^4.8.4",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
