--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "nodemon": "^2.0.22",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
