--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "cross-env": "^7.0.3",
     "dotenv-webpack": "^8.0.1",
     "nodemon-webpack-plugin": "^4.8.1",
@@ -21,6 +22,7 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "nodemon": "^2.0.22",
