--- a/client/package.json
+++ b/client/package.json
@@ -48,7 +48,6 @@
     "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1",
-    "axios": "^1.2.6"
+    "@babel/polyfill": "^7.12.1"
   }
 }
