--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,6 +13,8 @@
     "module": "es6",
     "target": "es5",
     "allowJs": true,
-    "moduleResolution": "node"
-  }
+    "moduleResolution": "node",
+    "experimentalDecorators": true
+  },
+  "suppressExperimentalDecorators": true
 }
