--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/pg": "^8.6.6",
     "cross-env": "^7.0.3",
     "dotenv-webpack": "^8.0.1",
     "nodemon-webpack-plugin": "^4.8.1",
@@ -27,6 +28,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "nodemon": "^2.0.22",
+    "pg": "^8.11.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack-node-externals": "^3.0.0"
