--- a/dev-config/docker-compose.yaml
+++ b/dev-config/docker-compose.yaml
@@ -7,9 +7,11 @@ services:
     build:
       context: ../server
       dockerfile: ../dev-config/Dockerfile.server
+    env_file: ../dev-config/.env
     environment:
       DATABASE_URL: postgres://user:pass@postgres:5432/db
       NODE_ENV: development
+      POSTGRES_HOST: postgres
       PORT: 3000
     ports:
       - "3000:3000"
