--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,22 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "cross-env NODE_ENV=development webpack"
+    "start": "cross-env NODE_ENV=development webpack",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
+    "@types/jest": "^29.5.1",
     "@types/pg": "^8.6.6",
+    "babel-jest": "^29.5.0",
     "cross-env": "^7.0.3",
     "dotenv-webpack": "^8.0.1",
+    "jest": "^29.5.0",
     "nodemon-webpack-plugin": "^4.8.1",
+    "ts-jest": "^29.1.0",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.2"
