--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.13",
     "@types/jest": "^29.5.1",
     "@types/pg": "^8.6.6",
+    "@types/winston": "^2.4.4",
     "babel-jest": "^29.5.0",
     "cross-env": "^7.0.3",
     "dotenv-webpack": "^8.0.1",
@@ -32,10 +33,12 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "express-winston": "^4.2.0",
     "nodemon": "^2.0.22",
     "pg": "^8.11.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "winston": "^3.9.0"
   }
 }
