--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,14 @@ logs/
 /coverage
 
 # production
+/dist
+/build
 
+client/dist
+client/build
+
+server/dist
+server/build
 server/src/data
 
 # misc
@@ -32,3 +39,5 @@ firebase.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+server/build/server.js
+server/build/server.js
