changed module initialization

--- a/.gitignore
+++ b/.gitignore
@@ -14,15 +14,15 @@ logs/
 /coverage
 
 # production
-/dist
-/build
+# /dist
+# /build
 
-client/dist
-client/build
+# /client/dist
+# /client/build
 
-server/dist
-server/build
-server/src/data
+# /server/dist
+/server/build
+/server/src/data
 
 # misc
 .DS_Store
@@ -39,5 +39,4 @@ firebase.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-server/build/server.js
 server/build/server.js
