refactored imports at client

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@modules/*": ["modules/*"],
       "@utilities/*": ["utilities/*"],
+      "@common/*": ["common/*"],
 
     },
     "outDir": "./dist/",
