wrote test for calculation endpoint

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,7 +12,8 @@
             "@modules/*": ["modules/*"],
             "@errors/*": ["errors/*"],
             "@utils/*": ["utils/*"],
-            "@common/*": ["common/*"],
+            "@common/*": ["modules/common/*"],
+            "@repositories/*": ["repositories/*"],
         },
         "resolveJsonModule": true,
         "allowJs": true,
