--- a/server/package.json
+++ b/server/package.json
@@ -13,14 +13,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
-    "@types/jest": "^29.5.1",
+    "@types/jest": "^29.5.2",
     "@types/pg": "^8.6.6",
+    "@types/supertest": "^2.0.12",
     "@types/winston": "^2.4.4",
     "babel-jest": "^29.5.0",
     "cross-env": "^7.0.3",
     "dotenv-webpack": "^8.0.1",
     "jest": "^29.5.0",
     "nodemon-webpack-plugin": "^4.8.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "webpack": "^5.80.0",
